--- a/src/assets/styles/components/_svg-icons.scss
+++ b/src/assets/styles/components/_svg-icons.scss
@@ -71,7 +71,7 @@
     &__type {
       $types: (
         primary: var(--grey-900),
-        secondary: var(--grey-800),
+        secondary: var(--grey-50),
         tertiary: var(--grey-500),
         disabled: var(--grey-400),
         selected: var(--brand-500),
